added change golfer and an add disc form (without functionality

--- a/project-client/src/App.css
+++ b/project-client/src/App.css
@@ -32,3 +32,11 @@ body {
 table, th, td, table caption {
   border: 1px solid #000000;
 }
+
+#add_disc {
+  margin-bottom: 5px;
+}
+
+#change_golfer select {
+  margin-top: 10px;
+}
