--- a/project-client/src/App.css
+++ b/project-client/src/App.css
@@ -15,18 +15,33 @@ body {
 
 .container {
   text-align: center;
-  align-self: center;
   margin: 5px;
   padding: 15px;
 }
 
 #golfer_container {
   border: 1px solid #000000;
+  width: 25%;
 }
 
 #golfer_container figure img {
   width: 50%;
   height: auto;
+}
+
+#add_disc_container {
+  text-align: center;
+  vertical-align: middle;
+}
+
+#add_disc_form {
+  display: inline-block;
+  vertical-align: middle;
+  text-align: right;
+}
+
+#add_disc_form select {
+  width: 50%;
 }
 
 table, th, td, table caption {
